--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 @charset 'utf-8';
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700');
 * , *::before, *::after{
   box-sizing: border-box;
 
@@ -12,7 +13,7 @@ html{
 }
 
 body{
-  background-color: #1b5faa;
+  background-color: #fff;
   margin:0;
   font-family: 'Poppins', sans-serif;
 }
@@ -20,85 +21,175 @@ a{
   color: inherit; /* 부모 스타일만 영향 받도록 */
   text-decoration:none;
 }
+h2{
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size:7rem;
+  letter-spacing: -1px;
+  font-weight:700;
+  color:#333; 
+}
+h3,h4{text-align:center;
+}
+
+.name{
+  color:#253b97;
+}
 .rwd/*반응형 웹 디자인 */{
   max-width:100%;
   height:auto;  
+  display:block;
 }
 .header_wrapper{
   border-bottom: 1px solid white; 
-  justify-content: ceneter;
+  justify-content: center;
 }
 .header{
-  width:80%;
-  height:50px;
+  width:90%;
+  min-height:72px;
   margin:30px auto;  
   display:flex;
-  flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  
 }
-    
+
+
+
 .navigation{
   list-style:none;
-  flex-direction:row;
   display:flex;
+  padding-top:23px;
 }
 .navigation li{
   margin:0 20px;
 }
+.navigation li:last-child{
+  margin-right:0;
+}
 .navigation a{
   text-decoration:none;
-  color:white;  
-  font-size: 2rem;    
+  color:#aec0c9;
+  font-size: 2rem;  
+  letter-spacing: 1px;   
+  font-weight:400;
 }
-.hello_wrapper{
-  background-image: url(../img/hands.png);
-  height:0;
+.navigation a:hover{
+  color:#253b97; 
+  transition: all 0.5s; /*움직임 자연스럽게 하는 코드 */
+}
+/* 상단 지앤비 끝 */
+
+/* 헤더시작 */
+.welcome_container{
   width:100%;
-  padding-top:100vh;
+  padding:0 13%;
+  height:70vh;
+  margin:30px auto; 
+  border-bottom:1px solid #253b97;
+  /* background-image: url(../img/profile.png);
   background-repeat: no-repeat;
-  background-position:0 0;
-  background-size: contain;
-
-  position:relative;
+  background-size:cover; 
+  background-position:50% 50%; */
+}
+.introduction{
+  font-size: 2rem;
 }
 
-.description{
-  background-color:yellow;
-  position:absolute;
-  top:50%;
-  left:50%;
-  text-align:center;
-  transform:translate(-50%,-50%);
+.card_container{
+  background-color: #fff;
+  width:74%;
+  margin:0 auto;
 }
-.img-wrapper{
-  width:50%;
-  background-color: lime;
-}
-.logo{
-  border: 5px solid red;
-  margin-top:-20px;
+.card_wrapper{
+  /* height:1200px; */
+  display:flex;
+  flex-direction: row;
+  flex-wrap:wrap;
+  align-items: center;
 }
 .card{
-  display:none;
-  background-color: white;
-  width:80%;
-  height:450px;
-  margin:20px auto;
+  width:45%;
+  margin:10px 2.5%;
+  display:flex;
+  flex-direction: column;
 }
-.card img{
-  display:none;
+.card .card_img{
+  background-color: yellow;
+  /* height:400px; */
+}
+.card_01 .card_img{
+  background-image: url(../img/card_01.jpg);
+  background-size: 100%;
+  background-repeat: no-repeat;
+}
+
+.card .card_img:hover{
+  background-color: #333;
+  transition: all 0.5s; 
+}
+
+
+.text_wrapper{
+  padding-bottom:20px;
 }
 .footer{
-  background-color: #07223f;
+  background-color: #00084a;
+  height:310px;  
   width:100%;
-  height:150px;  
+  padding:0 13%;
+  padding-top:40px;
+  display:flex;
+  justify-content: space-between;
 }
-.contact{
-list-style:none;
-flex-direction: row;
-justify-content: space-between;
+.footer a, .sum_intro ,.copy {
+  color:white;
+  font-weight:300;
+  font-size: 1.2rem;
 }
-.contact a{
-color: yellow;
+.sum_intro {
+  font-size:1.4rem;
+  line-height:22px;
+}
+.sum_intro .resume{
+  color:yellow;
+  margin-top:20px; 
+  font-size:1.4rem;
+  text-decoration: yellow;
+}
+.contact, .media{
+  list-style: none;
+  padding:0;
+}
+.contact li , .media li{
+  margin:15px 0; 
+}
+.contact li:first-child , .media li:first-child{
+  margin: 0;
+}
+.contact li:first-child a , .media li:first-child a{
+  font-weight:500; 
+  font-size:1.4rem;
+}
+
+.back-to-top{
+  position:absolute;
+}
+
+@media screen and (max-width:1000px){
+  /* 미디어쿼리 스크린마다 다른 코딩을 줄 수 있다. 이 부분은 데스크탑용 */
+.header{
+  width:100%;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 100px;
+}
+
+.navigation li:last-child{
+  margin-right:20px;
+}
+.card{
+  width:90%;
+  margin:10px 2.5%;
+  display:flex;
+  flex-direction: column;
 }
