--- a/css/index.css
+++ b/css/index.css
@@ -36,7 +36,7 @@ h3,h4{text-align:center;
 }
 .rwd/*반응형 웹 디자인 */{
   max-width:100%;
-  height:auto;  
+  height:auto;
   display:block;
 }
 .header_wrapper{
@@ -114,18 +114,30 @@ h3,h4{text-align:center;
 }
 .card .card_img{
   background-color: yellow;
-  /* height:400px; */
-}
-.card_01 .card_img{
-  background-image: url(../img/card_01.jpg);
-  background-size: 100%;
-  background-repeat: no-repeat;
 }
 
-.card .card_img:hover{
-  background-color: #333;
-  transition: all 0.5s; 
+.dark-bg{
+  display: block;
+  position: relative;
 }
+.dark-bg::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transition: all 0.4s;
+}
+.dark-bg:hover:before, .dark-bg:focus::before{
+  content: "Click Me";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: inherit;
+  background: rgba(0,0,0,.5);  
+}
+
 
 
 .text_wrapper{
@@ -133,9 +145,8 @@ h3,h4{text-align:center;
 }
 .footer{
   background-color: #00084a;
-  height:310px;  
   width:100%;
-  padding:0 13%;
+  padding:0 13% 100px 13%;
   padding-top:40px;
   display:flex;
   justify-content: space-between;
@@ -175,7 +186,7 @@ h3,h4{text-align:center;
 }
 
 @media screen and (max-width:1000px){
-  /* 미디어쿼리 스크린마다 다른 코딩을 줄 수 있다. 이 부분은 데스크탑용 */
+  /* 미디어쿼리 스크린마다 다른 코딩을 줄 수 있다. 이 부분은 모바일용 */
 .header{
   width:100%;
   display:flex;
@@ -191,5 +202,9 @@ h3,h4{text-align:center;
   width:90%;
   margin:10px 2.5%;
   display:flex;
+  flex-direction: column;
+}
+
+.footer{
   flex-direction: column;
 }
